# PlayGenCLI

./: AGENT_GUIDE.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
src/playgen/: __init__.py  cli.py
src/playgen/commands/: analyze.py  animation_cmd.py  asset_cmd.py  autoload_cmd.py  bridge_cmd.py  build.py  config_cmd.py  doctor.py  init_cmd.py  input_cmd.py  node.py  resource_cmd.py  run.py  scene.py  script.py  signal_cmd.py  snapshot_cmd.py
src/playgen/godot/: bridge.py  observe.py  project_file.py  runner.py  tscn.py  visibility.py
src/playgen/templates/: __init__.py
tests/: test_build.py  test_build_intelligence.py  test_config.py  test_project_file.py  test_tscn.py  test_v051_fixes.py  test_visibility.py
