[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "playgen"
version = "0.4.0"
description = "Vibe game dev CLI - from idea to playable Godot 4.x prototype"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
]

[project.scripts]
playgen = "playgen.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/playgen"]
